--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vim/bundle/cmdline-completion"]
 	path = .vim/bundle/cmdline-completion
 	url = https://github.com/vim-scripts/cmdline-completion.git
+[submodule ".vim/bundle/vim-bufsurf"]
+	path = .vim/bundle/vim-bufsurf
+	url = https://github.com/ton/vim-bufsurf.git
